# siliconflow-query

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/siliconflow_query/: __init__.py  api_client.py  cli.py  config.py  free_models.json  models.py  scraper.py
tests/: test_api_client.py  test_cli.py  test_config.py  test_models.py  test_scraper.py
tests/e2e/: __init__.py  test_cli_integration.py
